<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.river.mwp.AboutActivity" >
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/about_icon_app_des"
            android:background="@drawable/app_icon_medium" />
         
        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="arial"
            android:gravity="center"
            android:text="@string/about_mps_wifi_positining"
            android:textSize="36sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/about_introduction"
            android:textSize="14sp"
            android:textStyle="bold" />
         
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#C2C2C2"
            android:fontFamily="arial"
            android:gravity="left"
            android:padding="2dp"
            android:text="@string/about_introduction_content"
            android:textSize="12sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/about_version"
            android:textSize="14sp"
            android:textStyle="bold" />
         
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="arial"
            android:gravity="left"
            android:background="#C2C2C2"
            android:padding="2dp"
            android:text="@string/about_version_no"
            android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/about_product_id"
            android:textSize="14sp"
            android:textStyle="bold" />
         
        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="arial"
            android:gravity="left"
            android:background="#C2C2C2"
            android:padding="2dp"
            android:text="@string/about_product_id_content"
            android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        
        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="arial"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/about_warning"
            android:textSize="14sp"
            android:textStyle="bold" />
         
        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="arial"
            android:gravity="left"
            android:background="#C2C2C2"
            android:padding="2dp"
            android:text="@string/about_warning_content"
            android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="arial"
            android:gravity="bottom|center"
            android:onClick="onClickCopyright"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:text="@string/about_copyright"
            android:textColor="#3A5FCD"
            android:textSize="12sp"
            android:textStyle="normal" />

	</LinearLayout>
	
</LinearLayout>
