<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.river.mwp.RDSActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:background="@drawable/demo_back_blue_banner">
        
	        <ImageView
	            android:id="@+id/icon_rds"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/icon_rds_des"
	            android:src="@drawable/demo_rds_icon" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:orientation="vertical" >
		        <TextView
	                android:id="@+id/text_radio_dot_system"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:fontFamily="arial"
	                android:text="@string/radio_dot_system"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="#FFFFFF" />
	
	            <TextView
	                android:id="@+id/text_radio_access"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:fontFamily="arial"
	                android:text="@string/radio_access"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="#FFFFFF" />
	        </LinearLayout>
    </LinearLayout>
    
    <TextView
            android:id="@+id/rds_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="6"
            android:fontFamily="arial"
            android:text="@string/rds_des"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
            android:drawableLeft="@drawable/demo_back_blue_text"
            android:drawablePadding="5dp"
            android:textStyle="normal" />
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_weight="6"
		android:layout_marginTop="8dp"
		android:orientation="horizontal" >
	    
        <ImageView
            android:id="@+id/rds_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/demo_back_blue_photo"
            android:contentDescription="@string/rds_des" />
        
        <ImageView
            android:id="@+id/rds_des_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/demo_rds_photo"
            android:contentDescription="@string/iod_des"
            android:src="@drawable/abc_ab_share_pack_holo_dark" />
     </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_weight="6"
		android:layout_marginTop="8dp"
		android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/rds_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/demo_back_blue_video"
            android:contentDescription="@string/rds_des" />
        
        <VideoView
            android:id="@+id/rds_des_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="1"
            android:contentDescription="@string/rds_des" />
    </LinearLayout>

</LinearLayout>
